syntax = "proto3";

package user;
option go_package = "main/api/proto";

// proto 파일 변경 후 아래 명령어로 컴파일
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative api/proto/v1/user.proto

message User {
    uint32 id = 1;
    string email = 2;
    string name = 3;
    uint32 age = 4;
    string phone_number = 5;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
}

message CreateUserRequest {
    string email = 1;
    string name = 2;
    uint32 age = 3;
    string phone_number = 4;
}

message CreateUserResponse {
    User user = 1;
}


message GetUserRequest {
    uint32 id = 1;
}

message GetUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    uint32 id = 1;
    string name = 2;
    uint32 age = 3;
    string phone_number = 4;
}

message UpdateUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    uint32 id = 1;
}

message DeleteUserResponse {
    bool success = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}